kustomize/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toy-app-ingress
spec:
  rules:
    - host: "toy.parcae.office.kingsds.network" #"toy.localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: backend-svc
                port:
                  number: 80
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
